# iced

./: CHANGELOG.md  Cargo.toml
.github/workflows/: audit.yml  lint.yml  test.yml
accessibility/: Cargo.toml
accessibility/src/: id.rs  lib.rs  node.rs
core/: Cargo.toml
core/src/: border.rs  clipboard.rs  element.rs  event.rs  font.rs  gradient.rs  id.rs  image.rs  lib.rs  overlay.rs  padding.rs  rectangle.rs  renderer.rs  svg.rs  text.rs  theme.rs  widget.rs
core/src/event/wayland/: mod.rs  output.rs  overlap_notify.rs  session_lock.rs  window.rs
core/src/keyboard/: key.rs
core/src/mouse/: click.rs  interaction.rs
core/src/overlay/: group.rs
core/src/renderer/: null.rs
core/src/theme/: palette.rs
core/src/widget/: operation.rs  text.rs  tree.rs
core/src/widget/operation/: focusable.rs
core/src/window/: id.rs
examples/editor/: Cargo.toml
examples/game_of_life/: Cargo.toml
examples/gradient/: Cargo.toml
examples/integration/: Cargo.toml
examples/integration/src/: controls.rs  main.rs
examples/lazy/: Cargo.toml
examples/loading_spinners/: Cargo.toml
examples/multi_window/: Cargo.toml
examples/multi_window/src/: main.rs
examples/pane_grid/: Cargo.toml
examples/pokedex/: Cargo.toml
examples/scrollable/: Cargo.toml
examples/scrollable/src/: main.rs
examples/sctk_drag/: Cargo.toml
examples/sctk_drag/src/: dnd_destination.rs  dnd_source.rs  main.rs
examples/sctk_lazy/: Cargo.toml
examples/sctk_lazy/src/: main.rs
examples/sctk_session_lock/: Cargo.toml
examples/sctk_session_lock/src/: main.rs
examples/sctk_subsurface/: Cargo.toml
examples/sctk_subsurface/src/: main.rs  wayland.rs
examples/sctk_subsurface_gst/: Cargo.toml
examples/sctk_todos/: Cargo.toml
examples/sctk_todos/src/: main.rs
examples/svg/: Cargo.toml
examples/toast/src/: main.rs
examples/todos/: Cargo.toml
examples/todos/src/: main.rs
examples/tooltip/: Cargo.toml
examples/websocket/src/: main.rs
futures/: Cargo.toml
futures/src/: subscription.rs
graphics/src/: compositor.rs  damage.rs  gradient.rs  image.rs  settings.rs  text.rs  viewport.rs
graphics/src/text/: editor.rs  paragraph.rs
renderer/: Cargo.toml
renderer/src/: fallback.rs
runtime/: Cargo.toml
runtime/src/: clipboard.rs  dnd.rs  lib.rs  user_interface.rs  window.rs
runtime/src/multi_window/: state.rs
runtime/src/platform_specific/: mod.rs
runtime/src/platform_specific/wayland/: activation.rs  layer_surface.rs  mod.rs  popup.rs  session_lock.rs
runtime/src/program/: state.rs
runtime/src/window/: screenshot.rs
src/: application.rs  daemon.rs  error.rs  lib.rs  program.rs  settings.rs
src/wayland/: application.rs  mod.rs  program.rs
src/window/: icon.rs
tiny_skia/src/: engine.rs  geometry.rs  layer.rs  lib.rs  raster.rs  settings.rs  text.rs  vector.rs
tiny_skia/src/window/: compositor.rs
wgpu/: Cargo.toml
wgpu/src/: geometry.rs  layer.rs  lib.rs  settings.rs  window.rs
wgpu/src/image/: mod.rs
wgpu/src/window/: compositor.rs  wayland.rs  x11.rs
widget/: Cargo.toml
widget/src/: button.rs  canvas.rs  checkbox.rs  column.rs  container.rs  helpers.rs  image.rs  lazy.rs  mouse_area.rs  pane_grid.rs  pick_list.rs  radio.rs  row.rs  rule.rs  scrollable.rs  shader.rs  slider.rs  stack.rs  svg.rs  text_editor.rs  text_input.rs  themer.rs  toggler.rs  tooltip.rs  vertical_slider.rs
widget/src/image/: viewer.rs
widget/src/keyed/: column.rs
widget/src/lazy/: component.rs  responsive.rs
widget/src/overlay/: menu.rs
widget/src/pane_grid/: content.rs  title_bar.rs
winit/: Cargo.toml
winit/src/: a11y.rs  clipboard.rs  conversion.rs  error.rs  lib.rs  program.rs  proxy.rs  settings.rs
winit/src/application/: drag_resize.rs  state.rs
winit/src/platform_specific/: mod.rs
winit/src/platform_specific/wayland/: conversion.rs  keymap.rs  mod.rs  sctk_event.rs  subsurface_widget.rs  winit_window.rs
winit/src/platform_specific/wayland/commands/: activation.rs  layer_surface.rs  mod.rs  overlap_notify.rs  popup.rs  session_lock.rs
winit/src/platform_specific/wayland/event_loop/: mod.rs  proxy.rs  state.rs
winit/src/platform_specific/wayland/handlers/: activation.rs  compositor.rs  mod.rs  output.rs  overlap.rs  session_lock.rs  subcompositor.rs  toplevel.rs  wp_fractional_scaling.rs  wp_viewporter.rs
winit/src/platform_specific/wayland/handlers/seat/: keyboard.rs  pointer.rs  seat.rs  touch.rs
winit/src/platform_specific/wayland/handlers/shell/: layer.rs  xdg_popup.rs  xdg_window.rs
winit/src/program/: state.rs  window_manager.rs
