[package]
name = "iced_accessibility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO Ashley re-export more platform adapters
[features]
async-io = ["accesskit_winit?/async-io"]
tokio = ["accesskit_winit?/tokio"]

[dependencies]
accesskit = { git = "https://github.com/wash2/accesskit", tag = "iced-xdg-surface-0.13" }
accesskit_windows = { git = "https://github.com/wash2/accesskit", tag = "iced-xdg-surface-0.13", optional = true }
accesskit_macos = { git = "https://github.com/wash2/accesskit", tag = "iced-xdg-surface-0.13", optional = true }
accesskit_winit = { git = "https://github.com/wash2/accesskit", tag = "iced-xdg-surface-0.13", optional = true, default-features = false, features = [
    "rwh_06",
] }
# accesskit = { path = "../../../../accesskit/common" }
# accesskit_windows = { path = "../../../../accesskit/platforms/windows", optional = true }
# accesskit_macos = { path = "../../../../accesskit/platforms/macos", optional = true }
# accesskit_winit = { path = "../../../../accesskit/platforms/winit", optional = true, default-features = false, features = [
#     "rwh_06",
# ] }
