[package]
name = "iced_core"
description = "The essential ideas of iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
auto-detect-theme = ["dep:dark-light"]
advanced = []
a11y = ["iced_accessibility"]
wayland = ["cctk"]

[dependencies]
bitflags.workspace = true
bytes.workspace = true
glam.workspace = true
log.workspace = true
num-traits.workspace = true
once_cell.workspace = true
palette.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
thiserror.workspace = true
web-time.workspace = true

# TODO(POP): I think some of these dependencies were removed. Check on that
# xxhash-rust.workspace = true
window_clipboard.workspace = true
dnd.workspace = true
mime.workspace = true

cctk.workspace = true
cctk.optional = true
# /TODO(POP)

dark-light.workspace = true
dark-light.optional = true

[dependencies.serde]
version = "1"
optional = true
features = ["serde_derive"]


[target.'cfg(windows)'.dependencies]
raw-window-handle.workspace = true

[dev-dependencies]
approx = "0.5"
[dependencies.iced_accessibility]
version = "0.1.0"
path = "../accessibility"
optional = true
