[package]
name = "iced_wgpu"
description = "A renderer for iced on top of wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
geometry = ["iced_graphics/geometry", "lyon"]
image = ["iced_graphics/image"]
svg = ["iced_graphics/svg", "resvg/text"]
web-colors = ["iced_graphics/web-colors"]
webgl = ["wgpu/webgl"]
strict-assertions = []

[dependencies]
iced_graphics.workspace = true

bitflags.workspace = true
bytemuck.workspace = true
futures.workspace = true
glam.workspace = true
glyphon.workspace = true
guillotiere.workspace = true
log.workspace = true
once_cell.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
wgpu.workspace = true

lyon.workspace = true
lyon.optional = true

resvg.workspace = true
resvg.optional = true

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "redox")))'.dependencies]

rustix = { version = "0.38" }
raw-window-handle.workspace = true
cctk.workspace = true
wayland-protocols.workspace = true
wayland-backend = { version = "0.3.3", features = ["client_system"] }
wayland-client = { version = "0.31.2" }
wayland-sys = { version = "0.31.1", features = ["dlopen"] }
as-raw-xcb-connection = "1.0.1"
tiny-xlib = "0.2.3"
x11rb = { version = "0.13.1", features = [
    "allow-unsafe-code",
    "dl-libxcb",
    "dri3",
    "randr",
] }
