[package]
name = "sctk_todos"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced.workspace = true
iced.features = [
    "tokio",
    "wayland",
    "winit",
    "debug",
    "tiny-skia",
    "a11y",
    "wgpu",
]
# iced.features = ["async-std", "wayland", "debug", "wayland-clipboard", "a11y", "tiny-skia"]
# TODO(POP): Fix a11y not working with new winit
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced_core.workspace = true
once_cell = "1.15"
cctk.workspace = true
log = "0.4.17"
env_logger = "0.10.0"
async-std = "1.0"
directories-next = "2.0.0"

[profile.release-opt]
debug = true
